2002-03-28  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-default-applications-properties.c (setup_peditors): Fix typo
	(read_help_viewer): Rename accepts_lineno to accepts_urls to avoid confusion

2002-03-07  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-default-applications-properties.c (generic_guard): Set focus
	and emit signal here, instead of mnemonic handler
	(create_dialog): Set data on radio widgets, to be used for focus/entry
	tracking. Do not connect mnemonic_activate signals, as these are
	handled by toggles already.

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-default-applications-properties.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-17  Seth Nickell  <snickell@stanford.edu>

	* default-applications.desktop.in:

	Change menu name to "Preferred Applications" which faired
	better in user testing.

2002-02-11  Seth Nickell  <snickell@stanford.edu>

	* gnome-default-applications-properties-structs.c:
	* gnome-default-applications-properties.c: (read_editor),
	(setup_peditors), (read_browser), (browser_setup_custom),
	(value_changed_cb), (dialog_response), (create_dialog):
	* gnome-default-applications-properties.glade:

	Convert to instant apply, change to using property editors
	where convenient.
	
2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* Convert to apply/close, and commit a UI string
	fix from fflewddur@dropline.net.
	
Sun Feb 10 23:39:30 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-default-applications-properties.glade: Patch from
	fflewddur <fflewddur@dropline.net> to fix some strings.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-default-applications-properties.c (initialize_default_applications):
	Use glib methods instead of deprecated libgnome ones
	(read_editor): Do not crash on NULL value
	(read_help_viewer): Ditto
	(read_browser): Ditto

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install the icon into the pixmaps dir so
	the Panel & Nautilus will pick up on it.
